Fix alignment of calendar icon vertically (#1416)

--- a/ui.af.apps/src/main/content/jcr_root/apps/core/fd/components/form/datepicker/v1/datepicker/clientlibs/site/css/datepickerwidget.css
+++ b/ui.af.apps/src/main/content/jcr_root/apps/core/fd/components/form/datepicker/v1/datepicker/clientlibs/site/css/datepickerwidget.css
@@ -154,7 +154,7 @@
 
 .cmp-adaptiveform-datepicker__calendar-icon {
     position: absolute;
-    top: 45px;
+    top: 50%;
     right: 30px;
     z-index: 10;
     background: url("/etc.clientlibs/core/fd/components/form/datepicker/v1/datepicker/clientlibs/site/resources/calendar.png") no-repeat center center;
